Fix: overflow iOS

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -19,6 +19,7 @@ body {
 }
 
 html {
+  height: 100%;
   height: -webkit-fill-available;
   font-size: 12px;
 }
